<resources>
    <string name="app_name">Jobamax</string>
    <string name="back4app_server_url" translatable="false">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id" translatable="false">s3gwYWzFlAYgtfSLTNWZVp6wpTQwj5ISs5XgF7lL</string>
    <string name="back4app_client_key" translatable="false">scOjnd7zjtRTrqblPRg6iFcsJTSLS2phmd48OE0E</string>
    <string name="back4app_live_query_url" translatable="false">wss://jobamax.b4a.io/</string>
    <string name="pushwoosh_app_id" translatable="false">46BF6-FA55C</string>
    <string name="fcm_sender_id" translatable="false">916226274147</string>
    <string name="default_channel_id" translatable="false">channelid</string>
    <string name="facebook_app_id" translatable="false">304727217812972</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb304727217812972</string>
    <string name="product_id" translatable="false">android.test.purchased</string>
    <string name="recruiter">Recruiter</string>
    <string name="recruit">Recruit</string>
    <string name="refuse">Refuse</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="i_am_a">I am a</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="log_in">Sign In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="verify">Verify</string>
    <string name="please_enter_the_verification_code_sent_to">Please enter the verification code sent to %s</string>
    <string name="didn_t_get_the_code_resend">Didn\'t get the code? Resend</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="phone">Phone</string>
    <string name="course">Course</string>
    <string name="track">Track</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="job_offer">Job Offer</string>
    <string name="media">Media</string>
    <string name="subscription">Subscription</string>
    <string name="sponsorship">Sponsorship</string>
    <string name="my_personal_information">My Personal Information</string>
    <string name="hide_me">Hide Me</string>
    <string name="read_receipts">Read Receipts</string>
    <string name="social_networks">Social Networks</string>
    <string name="notifications">Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="newsletter">Newsletter</string>
    <string name="payment">Payment</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="company_information">Company Information</string>
    <string name="invoices">Invoices</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="share_jobamax">Share Jobamax</string>
    <string name="help_and_support">Help &amp; Support</string>
    <string name="email_us">Email us</string>
    <string name="contact_us">Contact us</string>
    <string name="community">Community</string>
    <string name="safety_tips">Safety Tips</string>
    <string name="community_guidelines">Community Guidelines</string>
    <string name="legal">Legal</string>
    <string name="privacy_preferences">Privacy Preferences</string>
    <string name="licences">Licences</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="temporary_disable_my_account">Temporarily disable my account</string>
    <string name="log_out">Log out</string>
    <string name="arg_version">Version 1.0</string>
    <string name="gender_with_asterisk">Gender<font fgcolor='#0975FE'>*</font></string>
    <string name="enter_gender_here">Enter gender here</string>
    <string name="submit">Submit</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="first_name_asterisk">First Name<font fgcolor='#0975FE'>*</font></string>
    <string name="enter_first_name">First name</string>
    <string name="company_name_asterisk">Company Name *</string>
    <string name="enter_company_name">Enter company name</string>
    <string name="postcode_asterisk">Zip code</string>
    <string name="email_asterisk">Email<font fgcolor='#0975FE'>*</font></string>
    <string name="enter_email">Enter email</string>
    <string name="phone_number_asterisk">Phone Number<font fgcolor='#0975FE'>*</font></string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="last_name_asterisk">Last Name</string>
    <string name="enter_last_name">Last name</string>
    <string name="enter_postcode">Enter Postcode</string>
    <string name="send_read_receipts">Send Read Receipts</string>
    <string name="manage_read_receipts">Manage Read Receipts</string>
    <string name="instruction_manage_read_receipts">Turning this off will prevent any matches from activating reading Read Receipts in your conversation from this moment forward.</string>
    <string name="current_location">Current Location</string>
    <string name="location">Location</string>
    <string name="distance">Distance</string>
    <string name="name_of_job">Name of Job</string>
    <string name="enter_job_name">Enter Job Name</string>
    <string name="company">Company*</string>
    <string name="city">City</string>
    <string name="enter_city">Enter City</string>
    <string name="industry">Industry</string>
    <string name="enter_industry">Enter Industry</string>
    <string name="type_of_work">Type of Work</string>
    <string name="choose_full_time_part_time">Choose Full time, Part time</string>
    <string name="choose_permanent_temporary">Choose Permanent, Temporary</string>
    <string name="monthly_salary">Monthly Salary</string>
    <string name="enter_salary">Enter Salary($)</string>
    <string name="level_of_hierarchy">Level of Hierarchy</string>
    <string name="select_high_medium_low">Select (High, Medium, Low)</string>
    <string name="key_skills_needed">Key Skills Needed</string>
    <string name="enter_skills">Enter Skills</string>
    <string name="job_category">Category</string>
    <string name="job">Job*</string>
    <string name="work_study">Remote</string>
    <string name="other">Other</string>
    <string name="add_skills">Add Skills</string>
    <string name="about_job">About Job</string>
    <string name="experience">Experiences</string>
    <string name="upload_job_presentation">Upload Job Presentation</string>
    <string name="permanent">Permanent</string>
    <string name="temporary">Temporary</string>
    <string name="part_time">Part-time</string>
    <string name="full_time">full-time</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="select_job_category">Select Job Category</string>
    <string name="select_experience">Select Experience</string>
    <string name="enter_job_details">Enter Job Details</string>
    <string name="job_offers">Job Offers</string>
    <string name="create">Create</string>
    <string name="no_offers_found">No Offers Found!</string>
    <string name="edit">Edit</string>
    <string name="job_details">Job Details</string>
    <string name="instruction_newsletter">I want to receive news, updates and offers from Jobamax</string>
    <string name="you_just_got_a_new_match">You just got a new match</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="someone_sent_you_a_new_message">Someone sent you a new message</string>
    <string name="type_user_name">Search</string>
    <string name="messages">Messages</string>
    <string name="new_matches">New Matches</string>
    <string name="enable_location">Enable Location</string>
    <string name="instruction_enable_location">You\'ll need to enable your location in order to use Jobamax</string>
    <string name="allow_location">Allow Location</string>
    <string name="tell_me_more">Tell Me More</string>
    <string name="job_presentation_uploaded">Job Presentation Uploaded</string>
    <string name="select_new_job_presentation">Select New Job Presentation</string>
    <string name="loading">Loading…</string>
    <string name="logo_upload">Logo Upload</string>
    <string name="video_presentation">Video Presentation</string>
    <string name="introduce_your_company_to_job_seekers">Introduce your company to job seekers</string>
    <string name="enter_company_registration">Enter company registration(optional)</string>
    <string name="company_registration">Company Registration</string>
    <string name="company_registration_with_asterisk">Company Registration<font fgcolor='#0975FE'>*</font></string>
    <string name="headquarter">Headquarter *</string>
    <string name="headquarter_with_asterisk">Headquarter<font fgcolor='#0975FE'>*</font></string>
    <string name="enter_headquarter_address">Enter headquarter address(optional)</string>
    <string name="enter_vat_number">Enter VAT number(optional)</string>
    <string name="vat_number">VAT number</string>
    <string name="vat_number_with_asterisk">VAT number<font fgcolor='#0975FE'>*</font></string>
    <string name="c_v">C.V.</string>
    <string name="job_search">Job Search</string>
    <string name="get_jobamax_reach">Get Jobamax Reach</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="enter_phone_number_with_country_code">Enter phone number with country code!</string>
    <string name="enter_valid_phone_number">Enter valid phone number!</string>
    <string name="date_of_birth_with_asterisk">Date of Birth*</string>
    <string name="enter_date_of_birth">Enter date of birth</string>
    <string name="menu_top_home">Home</string>
    <string name="menu_top_search">Search</string>
    <string name="menu_top_messages">Messages</string>
    <string name="menu_top_settings">Settings</string>
    <string name="label_none">None</string>
    <string name="label_get_jobamax_reach">Get Jobamax Reach</string>
    <string name="label_jobamax_club">Jobamax Club</string>
    <string name="hint_search">Search</string>
    <string name="label_matches">Matches</string>
    <string name="text_cv">C.V.</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="upload_resume_presentation">Upload Resume Presentation</string>
    <string name="resume_presentation_uploaded">Resume Presentation Uploaded</string>
    <string name="select_new_resume_presentation">Select New Resume Presentation</string>
    <string name="educations">Educations</string>
    <string name="school_name">School Name</string>
    <string name="schools">Schools</string>
    <string name="text_enter">Enter</string>
    <string name="program_name">Program Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="date_format_mm_yy">MM/YY</string>
    <string name="experiences">Experiences</string>
    <string name="add_education">Add Education</string>
    <string name="add_experiences">Add Experience</string>
    <string name="skills">Skills</string>
    <string name="password">Password</string>
    <string name="security">Security</string>
    <string name="company_name">Company Name</string>
    <string name="company_website">Company Website</string>
    <string name="company_size">Company Size</string>
    <string name="back">Back</string>
    <string name="enter_headquarter">Enter headquarters</string>
    <string name="headquarters">Headquarters</string>
    <string name="website_url">Website URL</string>
</resources>