<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="com.findajob.jobamax.recruiter.profile.account.home.RecruiterAccountInterface" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/screen_background"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/customToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@android:color/white"
            android:elevation="4dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="@{() -> handler.onBackButtonClicked()}"
                android:padding="4dp"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/regular_label"
                android:text="@string/account"
                android:textColor="@color/colorPrimary"
                android:textSize="21sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            style="@style/recruiter_account_menu.arrow_right"
                            android:onClick="@{() -> handler.onPersonalInformationClicked()}"
                            android:text="@string/my_personal_information" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone">

                            <TextView
                                style="@style/recruiter_account_menu"
                                android:text="@string/hide_me" />

                            <androidx.appcompat.widget.SwitchCompat
                                android:id="@+id/hideMeFlag"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="16dp"
                                android:onCheckedChanged="@{(switch,checked) -> handler.toggleHideMe(checked)}" />
                        </RelativeLayout>

                        <TextView
                            style="@style/account_subheading_recruiter"
                            android:text="@string/read_receipts" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/recruiter_account_menu"
                                android:onClick="@{() -> handler.onManageReadReceiptsClicked()}"
                                android:text="Manage Read Receipts" />

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="8dp"
                                android:src="@drawable/ic_arrow_right" />
                        </RelativeLayout>

                        <TextView
                            style="@style/account_subheading_recruiter"
                            android:text="@string/social_networks" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|center_vertical"
                            android:onClick="@{()-> handler.onSocialLayoutClicked()}"
                            android:paddingVertical="16dp">

                            <ImageView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:layout_margin="4dp"
                                android:src="@drawable/ic_linkedin" />

                            <ImageView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:layout_margin="4dp"
                                android:src="@drawable/instagram_circle" />

                            <ImageView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:layout_margin="4dp"
                                android:src="@drawable/ic_facebook" />

                            <ImageView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:layout_margin="4dp"
                                android:src="@drawable/twitter_circle" />

                        </LinearLayout>

                        <TextView
                            style="@style/account_subheading_recruiter"
                            android:text="@string/security" />

                        <TextView
                            style="@style/recruiter_account_menu.arrow_right"
                            android:onClick="@{() -> handler.onPasswordClicked()}"
                            android:text="@string/password" />

                        <TextView
                            style="@style/account_subheading_recruiter"
                            android:text="@string/notifications" />

                        <TextView
                            style="@style/recruiter_account_menu.arrow_right"
                            android:onClick="@{() -> handler.onPushNotificationsClicked()}"
                            android:text="@string/push_notifications" />

                        <View
                            style="@style/v_divider"
                            android:layout_marginHorizontal="16dp" />

                        <TextView
                            style="@style/recruiter_account_menu.arrow_right"
                            android:onClick="@{() -> handler.onNewsletterClicked()}"
                            android:text="@string/newsletter" />


                        <TextView
                            style="@style/account_subheading_recruiter"
                            android:text="@string/payment" />

                        <TextView
                            style="@style/recruiter_account_menu.arrow_right"
                            android:onClick="@{() -> handler.onPaymentMethodsClicked()}"
                            android:text="@string/payment_methods" />


                        <View
                            style="@style/v_divider"
                            android:layout_marginHorizontal="16dp" />

                        <TextView
                            style="@style/recruiter_account_menu.arrow_right"
                            android:onClick="@{() -> handler.onCompanyInformationClicked()}"
                            android:text="@string/company_information"
                            android:visibility="gone" />

                        <TextView
                            style="@style/recruiter_account_menu.arrow_right"
                            android:onClick="@{() -> handler.onInvoicesClicked()}"
                            android:text="@string/invoices" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:background="@color/screen_background" />

                        <TextView
                            style="@style/recruiter_account_menu"
                            android:onClick="@{() -> handler.onRestorePurchaseClicked()}"
                            android:text="@string/restore_purchase" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:background="@color/screen_background" />

                        <TextView
                            style="@style/recruiter_account_menu"
                            android:onClick="@{() -> handler.onShareJobamaxClicked()}"
                            android:text="@string/share_jobamax" />

                        <TextView
                            style="@style/account_subheading_recruiter"
                            android:text="@string/contact_us" />

                        <TextView
                            style="@style/recruiter_account_menu"
                            android:onClick="@{() -> handler.onHelpAndSupportClicked()}"
                            android:text="@string/help_and_support" />

                        <View style="@style/v_divider"
                            android:layout_marginHorizontal="16dp"/>

                        <TextView
                            style="@style/recruiter_account_menu"
                            android:onClick="@{() -> handler.onEmailUsClicked()}"
                            android:text="@string/email_us" />

                        <TextView
                            style="@style/account_subheading_recruiter"
                            android:text="@string/community" />

                        <TextView
                            style="@style/recruiter_account_menu"
                            android:onClick="@{() -> handler.onCommunityGuidelinesClicked()}"
                            android:text="@string/community_guidelines" />

                        <View style="@style/v_divider"
                            android:layout_marginHorizontal="16dp"/>

                        <TextView
                            style="@style/recruiter_account_menu"
                            android:onClick="@{() -> handler.onSafetyTipsClicked()}"
                            android:text="@string/safety_tips" />


                        <TextView
                            style="@style/account_subheading_recruiter"
                            android:text="@string/legal" />

                        <TextView
                            style="@style/recruiter_account_menu"
                            android:onClick="@{() -> handler.onPrivacyPolicyClicked()}"
                            android:text="@string/privacy_policy" />

                        <View
                            style="@style/v_divider"
                            android:layout_marginHorizontal="16dp" />

                        <TextView
                            style="@style/recruiter_account_menu"
                            android:onClick="@{() -> handler.onTermsOfServiceClicked()}"
                            android:text="@string/terms_of_service" />


                        <TextView
                            style="@style/recruiter_account_menu"
                            android:onClick="@{() -> handler.onLicensesClicked()}"
                            android:text="@string/licences"
                            android:visibility="gone" />


                        <TextView
                            style="@style/recruiter_account_menu"
                            android:onClick="@{() -> handler.onPrivacyPreferencesClicked()}"
                            android:text="@string/privacy_preferences"
                            android:visibility="gone" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/screen_background"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="150dp"
                                android:layout_height="39dp"
                                android:layout_marginVertical="16dp"
                                android:src="@drawable/logo_jobamax_blue" />

                            <TextView
                                style="@style/regular_subtext"
                                android:layout_marginBottom="16dp"
                                android:text="@string/arg_version" />
                        </LinearLayout>

                        <TextView
                            style="@style/recruiter_account_menu"
                            android:onClick="@{() -> handler.onLogoutClicked()}"
                            android:text="@string/log_out" />

                        <View
                            style="@style/v_divider"
                            android:layout_marginHorizontal="16dp" />

                        <TextView
                            style="@style/recruiter_account_menu"
                            android:onClick="@{() -> handler.onTemporaryDisableAccountClicked()}"
                            android:text="@string/temporary_disable_my_account" />

                        <View
                            style="@style/v_divider"
                            android:layout_marginHorizontal="16dp" />

                        <TextView
                            style="@style/recruiter_account_menu"
                            android:onClick="@{() -> handler.onDeleteAccountClicked()}"
                            android:text="@string/delete_my_account" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </ScrollView>
    </LinearLayout>

</layout>