<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.findajob.jobamax.recruiter.profile.account.company.CompanyInformationInterface" />

        <variable
            name="companyData"
            type="com.findajob.jobamax.model.Company" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_background"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@android:color/white"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:elevation="2dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:onClick="@{() -> handler.onBackButtonClicked()}"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/blue_2" />

            <TextView
                style="@style/regular_label"
                android:layout_centerInParent="true"
                android:text="@string/back"
                android:textColor="@color/blue_2"
                app:layout_constraintBottom_toBottomOf="@id/iv_back"
                app:layout_constraintLeft_toRightOf="@id/iv_back"
                app:layout_constraintTop_toTopOf="@id/iv_back" />


            <TextView
                style="@style/regular_label"
                android:layout_centerInParent="true"
                android:text="@string/company_information"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/company_information_heading"
                    android:text="@string/company_name_asterisk" />


                <EditText
                    android:id="@+id/companyField"
                    style="@style/company_information_field"
                    android:hint="@string/company_name"
                    android:inputType="textCapWords"
                    android:text="@={companyData.name}" />

                <TextView
                    style="@style/company_information_heading"
                    android:text="@string/company_registration_with_asterisk"
                    android:visibility="gone" />


                <EditText
                    android:id="@+id/companyRegField"
                    style="@style/company_information_field"
                    android:hint="@string/enter_company_registration"
                    android:inputType="textCapWords"
                    android:text="@={companyData.regNumber}"
                    android:visibility="gone" />


                <TextView
                    style="@style/company_information_heading"
                    android:text="@string/headquarters" />

                <EditText
                    android:id="@+id/headquarterField"
                    style="@style/company_information_field"
                    android:hint="@string/enter_headquarter"
                    android:inputType="textCapWords"
                    android:text="@={companyData.headquarterAddress}" />

                <TextView
                    style="@style/company_information_heading"
                    android:text="@string/vat_number" />


                <EditText
                    android:id="@+id/vatField"
                    style="@style/company_information_field"
                    android:hint="@string/enter_vat_number"
                    android:inputType="textCapWords"
                    android:text="@={companyData.vatNumber}" />

                <TextView
                    style="@style/company_information_heading"
                    android:text="@string/company_website" />


                <EditText
                    android:id="@+id/company_website"
                    style="@style/company_information_field"
                    android:hint="@string/website_url"
                    android:inputType="textCapWords"
                    android:text="@={companyData.companyWebsite}" />

                <TextView
                    style="@style/company_information_heading"
                    android:text="@string/company_size" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_company_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_16"
                    android:orientation="vertical"
                    android:padding="16dp"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_company_size" />

                <Button
                    style="@style/primary_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginBottom="72dp"
                    android:onClick="@{() -> handler.onSubmitButtonClicked()}"
                    android:text="@string/submit" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>